--- a/style.css
+++ b/style.css
@@ -183,25 +183,25 @@ iframe {
 @media screen and (max-width: 390px) {
   nav {
     font-size: 15px;
-    padding-bottom: 5px;
+    margin-bottom: -20px;
   }
 
   h1 {
     font-size: 40px;
-    margin-bottom: -20px;
+    margin-top: 50px;
   }
 
-  h2 {
-    font-size: 20px;
-    margin-top: 15px;
-  }
-
-  img {
+  img  {
     width: 250px;
+    margin-left: 40px;
+    margin-top: 25px;
+    box-shadow: 5px 5px 5px 0px #589f66 !important;
   }
 
   p {
     font-size: 30px;
+    padding: 10px 10px;
+    margin-top: 25px;
   }
 
   iframe {
@@ -209,6 +209,21 @@ iframe {
     width: 300px;
   }
   .network {
-    font-size: 10px;
+    font-size: 2em;
+    margin-left: 15px;
+    background-color: #3a4643;
+    color: #589f66;
   }
+  .tel{
+    margin-left: 15px;
+    font-size: 2em;
+    background-color: #3a4643;
+    color: #589f66;
+  }
+
+  h2 {
+    font-size: 20px;
+    margin-top: 15px;
+  }
+
 }
